<resources>
    <string name="app_name">Bunker</string>
    <string name="greeting">Давай познакомимся, прежде чем начать игру</string>
    <string name="under_greeting">Теперь дискусионная игра в твоём телефоне. Докажи, что именно ты можешь попасть в бункер</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="back_button">Назад</string>
    <string name="reg">Регистрация</string>
    <string name="continue_btn">Продолжить</string>
    <string name="google">Регистрация через Google аккаунт</string>
    <string name="name_field">Ваше имя</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="more_info">Подробнее с правилами игры и функциями приложения вы можете ознакомиться в соответствующих разделах меню</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Домой</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="create_game_id">Создать игру</string>
    <string name="choose_settings">Выберите подходящие настройки и начните новую игру</string>
    <string name="new_game_text">Новая игра</string>
    <string name="connect">Присоединиться</string>
    <string name="connect_to_game_text">Зайдите по ключу доступа в уже созданную игру</string>
    <string name="connect_button_text">Войти</string>
    <string name="rules">Правила игры</string>
    <string name="settings">Настройки</string>
    <string name="about">О разработчиках</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="exit">Выход</string>
    <string name="enter_code_text">Введите код доступа от комнаты, в которую вы хотите войти</string>
    <string name="enter_code">Код доступа</string>
    <string name="leave_game_text">Покинуть игру</string>
    <string name="default_code">00000</string>
    <string name="start">Начать</string>
    <string name="your_characteristics">Ваши характеристики</string>
    <string name="profession">Профессия</string>
    <string name="doctor">Врач</string>
    <string name="phobia">Фобия</string>
    <string name="claustrophobia">Клаустрофобия</string>
    <string name="health">Состояние здоровья</string>
    <string name="absolutely_healthy">Абсолютно здоров</string>
    <string name="human_quality">Человеческое качество</string>
    <string name="communicative">Общительный</string>
    <string name="hobby">Хобби</string>
    <string name="fishing">Рыбалка</string>
    <string name="skill">Дополнительный навык</string>
    <string name="five_languages">Знание 5 языков</string>
    <string name="man">Мужчина 25 лет, гетеросексуальный</string>
    <string name="specials">Специальные условия</string>
    <string name="special_card_text_one">Ты можешь поменять свою характеристику “Дополнительная информация” на любую другую</string>
    <string name="players">Игроки</string>
    <string name="you">Вы</string>
    <string name="excluded">Исключен</string>
    <string name="minus">-</string>
    <string name="biology">Биология</string>
    <string name="apocalypse">Апокалипсис</string>
    <string name="bunker">Бункер</string>
    <string name="chemical_war">Химическая война</string>
    <string name="chemical_war_description">В результате применения химикатов серьёзно изменился экологический баланс. Нарушен микробиологический состав почвы, отравлены растения. После выхода из бункера останется малая часть животных и растений, вода и почва заражены, оставшееся население - 10%.</string>
    <string name="k20">Бункер “К20” под землей</string>
    <string name="bunker_decription">Но диаграммы связей представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть подвергнуты целой серии независимых исследований. Значимость этих проблем настолько очевидна, что убеждённость некоторых оппонентов требует от нас анализа модели развития.</string>
    <string name="_22_15">22:15</string>
    <string name="log_one">Поменял свою характеристику “Дополнительная информация” на любую другую</string>
    <string name="log_two">Игрок “Михайлов Игорь” исключён выбором голосования</string>
    <string name="_22_34">22:34</string>
    <string name="_22_35">22:35</string>
    <string name="log_three">Меняет тип апокалипсиса на “Биотерроризм”. Теперь ваша угроза иная!</string>
</resources>