<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/image_fist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_fist_bottom"
        android:src="@drawable/ic_fist_180px" />

    <TextView
        android:id="@+id/greeting_text"
        style="@style/TextStyle"
        android:layout_marginStart="@dimen/margin_text_start_end"
        android:layout_marginEnd="@dimen/margin_text_start_end"
        android:fontFamily="@font/gilroy_semi_bold"
        android:lineSpacingExtra="4sp"
        android:text="@string/greeting"
        android:textColor="@color/greeting_text_color"
        android:textSize="@dimen/greeting_text_size" />

    <TextView
        android:id="@+id/text_under_greeting"
        style="@style/TextStyle"
        android:layout_marginStart="@dimen/margin_text_start_end"
        android:layout_marginTop="@dimen/margin_text_under_greeting"
        android:layout_marginEnd="@dimen/margin_text_start_end"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="5sp"
        android:text="@string/under_greeting"
        android:textSize="@dimen/text_under_greeting_size" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text_start_end"
        android:layout_marginTop="@dimen/margin_reg_button"
        android:layout_marginEnd="@dimen/margin_text_start_end"
        android:background="@drawable/gradient"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="@dimen/registration_button_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_enter"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/enter"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_button_size"
        app:rippleColor="@color/black" />


</LinearLayout>