<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_fist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_thirty"
        android:src="@drawable/ic_fist_180px" />

    <TextView
        android:id="@+id/greeting_text"
        style="@style/TextStyle"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:fontFamily="@font/gilroy_semi_bold"
        android:lineSpacingExtra="4sp"
        android:text="@string/greeting"
        android:textColor="@color/greeting_text_color"
        android:textSize="@dimen/text_twenty" />

    <TextView
        android:id="@+id/text_under_greeting"
        style="@style/TextStyle"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="5sp"
        android:text="@string/under_greeting"
        android:textSize="@dimen/text_sixteen" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_thirty_two"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:background="@drawable/gradient"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_fourteen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_forty_two"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_fourteen"
        app:rippleColor="@color/black" />


</LinearLayout>