<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_thirty"
        android:layout_marginTop="@dimen/margin_twenty"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/back_button"
        android:textAllCaps="false"
        android:textColor="@color/greeting_text_color"
        android:textSize="@dimen/text_fourteen"
        app:icon="@drawable/ic_arrow_back"
        app:iconTint="@color/greeting_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/black" />

    <TextView
        android:id="@+id/registration_text"
        style="@style/TextStyle"
        android:layout_margin="@dimen/margin_twenty"
        android:text="@string/reg"
        android:textSize="@dimen/text_twenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_twenty_four"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/repeatPasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_twenty_four"
        android:hint="@string/name_field"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_twenty_four"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_twenty_four"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:layout_marginBottom="@dimen/margin_forty_two"
        android:background="@drawable/gradient_second"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_fourteen"
        app:layout_constraintBottom_toTopOf="@id/google_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty_four"
        android:layout_marginEnd="@dimen/margin_twenty_four"
        android:layout_marginBottom="@dimen/margin_forty_two"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_fourteen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>